Fixed leaves on two months non visibility (#562)

--- a/Public/Assets/Css/reboot.css
+++ b/Public/Assets/Css/reboot.css
@@ -659,8 +659,9 @@ td.calendrier-jour.fermeture {
     background: #CEB6FF;
 }
 
-td.calendrier-jour.horsMois {
+th.horsMois {
     background: #CCC;
+    color: white;
 }
 
 td.calendrier-jour.conge_all.conge_ok {
